--- a/css/style.css
+++ b/css/style.css
@@ -369,6 +369,7 @@ body {
 .confirm-modal {
   display: flex;
   align-items: center;
+  text-align: center;
   gap: 13px;
   position: absolute;
   left: 50%;
@@ -381,6 +382,7 @@ body {
   border-radius: 20px;
   box-shadow: var(--nuevo);
   transition: 225ms ease-in-out;
+  z-index: 9999;
 }
 
 .confirm-animation {
